--- a/package.json
+++ b/package.json
@@ -3,5 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "Jim O'Brien <jim@jimmed.net>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "test": "jest"
+  },
+  "devDependencies": {
+    "jest": "^23.6.0",
+    "lodash": "^4.17.11"
+  }
 }
