--- a/package.json
+++ b/package.json
@@ -1,14 +1,25 @@
 {
   "name": "snail-sort",
   "version": "1.0.0",
-  "main": "index.js",
   "author": "Jim O'Brien <jim@jimmed.net>",
-  "license": "MIT",
+  "license": "WTFPL",
+  "main": "snailSort.js",
+  "esnext": "snailSort.flow.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "flow": "flow",
+    "build": "babel snailSort.flow.js -o snailSort.js",
+    "prepublish": "run-s build"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.0",
+    "@babel/core": "^7.2.0",
+    "@babel/preset-flow": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
+    "flow-bin": "^0.88.0",
     "jest": "^23.6.0",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "npm-run-all": "^4.1.5"
   }
 }
