--- a/package.json
+++ b/package.json
@@ -17,11 +17,20 @@
     "@babel/core": "^7.2.0",
     "@babel/preset-flow": "^7.0.0",
     "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
+    "eslint": "^5.10.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-flow": "^2.29.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-prettier": "^3.0.0",
     "flow-bin": "^0.88.0",
     "flow-typed": "^2.5.1",
     "jest": "^23.6.0",
     "lodash": "^4.17.11",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.15.3",
+    "prettier-eslint": "^8.8.2"
   }
 }
