--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "esnext": "src/snailSort.js",
   "scripts": {
     "test": "jest",
+    "eslint": "eslint src test",
     "flow": "flow",
     "build": "babel src/ -d dist/",
     "prepublish": "run-s build",
